# BriefURL

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-03-21-064958_brief_url/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
