[package]
name = "BriefURL"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
authors = ["Anish Nath <anishgood@yahoo.co.in>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0" , features = ["sqlite"] }
dotenvy = "0.15"

[lib]
doc = false